--- a/.profiles/educator_present/dot_vscode/settings.json
+++ b/.profiles/educator_present/dot_vscode/settings.json
@@ -63,7 +63,7 @@
   "editor.fontSize": 17,
   "editor.fontWeight": "600",
   "editor.formatOnSave": true,
-  "editor.inlineSuggest.enabled": false,
+  "editor.inlineSuggest.enabled": true,
   "editor.minimap.enabled": false,
   "explorer.compactFolders": false,
   "explorer.decorations.colors": false,
@@ -137,5 +137,23 @@
   "workbench.editor.showIcons": false,
   "workbench.hover.delay": 5000,
   "workbench.iconTheme": null,
-  "workbench.statusBar.visible": false
+  "workbench.statusBar.visible": false,
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default",
+        "enableSsl": "Disabled"
+      },
+      "ssh": "Disabled",
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MariaDB",
+      "name": "MariaDB",
+      "password": "p",
+      "username": "root",
+      "database": "information_schema"
+    }
+  ],
+  "sqltools.results.reuseTabs": "connection"
 }
